--- a/app/assets/stylesheets/it4.base/_base.page.sass
+++ b/app/assets/stylesheets/it4.base/_base.page.sass
@@ -10,7 +10,6 @@ html
 body 
   background-color: $c-background
   font-family: 'Roboto', Sans-serif
-  padding-left: 75px
   overflow-x: hidden
   background: $c-background
   padding-top: 72px
@@ -19,3 +18,6 @@ body
   &.bare,
   &.admin
     padding: $row-gutter
+    
+  @include above($bp-xsmall)
+    padding-left: 75px
